Se agrego el primer js para el cliente.  - browserify, babel

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
-    link(rel='stylesheet', href='/public/app.css')    
+    link(rel='stylesheet', href='app.css')    
     section#main-container
     footer.site-footer
       .container
@@ -24,3 +24,4 @@ html
     script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
     // Compiled and minified JavaScript
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js')
+    script(type='application/javascript' src='app.js')
